--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1 id="human">You: 0</h1>
     <h1 id="computer">Computer: 0</h1>
-    <script src="index.js"></script>
+    <script src="javascript.js"></script>
   </body>
 </html>
