--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1 id="human">You: 0</h1>
-    <h1 id="computer">Computer: 0</h1>
+    <h1 id="wins">You: 0</h1>
+    <h1 id="loses">Computer: 0</h1>
     <script src="javascript.js"></script>
   </body>
 </html>
